// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic will assert a joined property's value 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Foo\`
	  inner join \`Bar\` on \`Bar\`.\`color\` = \`Foo\`.\`color\`
	where
	  \`Bar\`.\`value\` = 42
`;

exports[`basic will emit where clauses 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Test\`
	where
	  \`Test\`.\`a\` = 1
	  and \`Test\`.\`b\` <> 2
	  and \`Test\`.\`c\` > 3
	  and \`Test\`.\`d\` < 4
`;

exports[`basic will match values via object 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Foo\`
	where
	  \`Foo\`.\`name\` = 'Gabe'
	  and \`Foo\`.\`color\` = 'blue'
`;

exports[`nested will match nested values 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Foo\`
	  inner join \`Bar\` on \`Bar\`.\`color\` = \`Foo\`.\`color\`
`;
